/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

import {updateTranslationFileMessages} from '@docusaurus/utils';
import {getTranslationFiles, translateContent} from '../translations';
import {DEFAULT_OPTIONS} from '../options';
import type {PluginOptions, BlogContent} from '@docusaurus/plugin-content-blog';

const sampleBlogOptions: PluginOptions = {
  ...DEFAULT_OPTIONS,
  blogTitle: 'My blog',
  blogDescription: "Someone's random blog",
  blogSidebarTitle: 'All my posts',
};

const sampleBlogContent: BlogContent = {
  blogTitle: sampleBlogOptions.blogTitle,
  blogDescription: sampleBlogOptions.blogDescription,
  blogSidebarTitle: sampleBlogOptions.blogSidebarTitle,
  blogPosts: [],
  blogTags: {},
  blogTagsListPath: '/tags',
};

function getSampleTranslationFiles() {
  return getTranslationFiles(sampleBlogOptions);
}
function getSampleTranslationFilesTranslated() {
  const translationFiles = getSampleTranslationFiles();
  return translationFiles.map((translationFile) =>
    updateTranslationFileMessages(
      translationFile,
      (message) => `${message} (translated)`,
    ),
  );
}

describe('getContentTranslationFiles', () => {
  it('returns translation files matching snapshot', () => {
    expect(getSampleTranslationFiles()).toMatchSnapshot();
  });
});

describe('translateContent', () => {
  it('falls back when translation is incomplete', () => {
    expect(
      translateContent(sampleBlogContent, [{path: 'foo', content: {}}]),
    ).toMatchSnapshot();
  });

  it('does not translate anything if translation files are untranslated', () => {
    const translationFiles = getSampleTranslationFiles();
    expect(translateContent(sampleBlogContent, translationFiles)).toEqual(
      sampleBlogContent,
    );
  });

  it('returns translated loaded', () => {
    const translationFiles = getSampleTranslationFilesTranslated();
    expect(
      translateContent(sampleBlogContent, translationFiles),
    ).toMatchSnapshot();
  });
});
